Added initial implementation of uploading bulk amount of players by interpreting CSV file