@@ -17,10 +17,12 @@ import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.server.ResponseStatusException;
+
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
 import java.time.LocalDate;
-import java.util.Collections;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -186,11 +188,67 @@ public class PlayerServiceImpl implements PlayerService {
         return result.map(PlayerDTO::fromEntity);
     }
 
-    //TODO: need to implement this
     @Override
     public List<PlayerDTO> bulkUploadPlayers(MultipartFile file) {
-        log.warn("Bulk upload not implemented yet");
-        return Collections.emptyList();
+        if (file.isEmpty()) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Uploaded file is empty");
+        }
+
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(file.getInputStream()))) {
+            String header = reader.readLine();
+            if (header == null) {
+                throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Missing header row");
+            }
+
+            String[] columns = header.split(",");
+            List<String> expected = List.of("firstName", "lastName", "dateOfBirth", "height", "nationalities", "positions");
+
+            for (String col : expected) {
+                if (!Arrays.asList(columns).contains(col)) {
+                    throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Missing required column: " + col);
+                }
+            }
+
+            List<PlayerDTO> createdPlayers = new ArrayList<>();
+            String line;
+            while ((line = reader.readLine()) != null) {
+                String[] tokens = line.split(",");
+
+                Map<String, String> data = new HashMap<>();
+                for (int i = 0; i < tokens.length && i < columns.length; i++) {
+                    data.put(columns[i].trim(), tokens[i].trim());
+                }
+
+                PlayerDTO dto = new PlayerDTO();
+                dto.setFirstName(data.get("firstName"));
+                dto.setLastName(data.get("lastName"));
+                dto.setDateOfBirth(LocalDate.parse(data.get("dateOfBirth")));
+                dto.setHeight(Double.parseDouble(data.get("height")));
+
+                Set<String> nationalities = Arrays.stream(data.get("nationalities").split("[|/;#!%]"))
+                        .map(String::trim)
+                        .filter(s -> !s.isEmpty())
+                        .collect(Collectors.toSet());
+                dto.setNationalities(nationalities);
+
+                Set<String> positions = Arrays.stream(data.get("positions").split("[|/;#!%]"))
+                        .map(String::trim)
+                        .filter(s -> !s.isEmpty())
+                        .collect(Collectors.toSet());
+                dto.setPositions(positions);
+
+                createdPlayers.add(createPlayer(dto));
+            }
+
+            return createdPlayers;
+
+        } catch (IOException e) {
+            log.error("Error reading file", e);
+            throw new ResponseStatusException(HttpStatus.INTERNAL_SERVER_ERROR, "Error reading file");
+        } catch (Exception e) {
+            log.error("Bulk upload failed", e);
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Malformed data: " + e.getMessage());
+        }
     }
 
     @Override
